ArrayList 컨테이너 소스 세부사항 수정

--- a/02_List/makefile
+++ b/02_List/makefile
@@ -1,4 +1,4 @@
 all: ArrayListTest
 
-ArrayListTest: main.cpp ArrayList.hpp
-	g++ -o ArrayListTest main.cpp
+ArrayListTest: ArrayListTest.cpp ArrayList.hpp
+	g++ -o ArrayListTest ArrayListTest.cpp
