ArrayList 복사생성자 및 대입연산자 오버로딩, listTestApp추가, list.md 순차리스트 장단점 추가.

--- a/02_List/makefile
+++ b/02_List/makefile
@@ -1,4 +1,4 @@
-all: ArrayListTest
+all: listTestApp
 
-ArrayListTest: ArrayListTest.cpp ArrayList.hpp
-	g++ -o ArrayListTest ArrayListTest.cpp
+listTestApp: listTestApp.cpp ArrayList.hpp
+	g++ -o listTestApp listTestApp.cpp
