SinglyLinkedList 추가 및 ADT 정렬 기능 추가

--- a/02_List/makefile
+++ b/02_List/makefile
@@ -1,4 +1,4 @@
 all: listTestApp
 
-listTestApp: listTestApp.cpp ArrayList/ArrayList.hpp
+listTestApp: listTestApp.cpp ArrayList/ArrayList.hpp SinglyLinkedList/SinglyLinkedList.hpp
 	g++ -o listTestApp listTestApp.cpp
