List ADT 수정 및 테스트 파일 작성, exit()함수 호출 및 fprintf()함수 호출 수정

--- a/02_List/makefile
+++ b/02_List/makefile
@@ -1,4 +1,10 @@
-all: listTestApp
+all: listTestApp listADT
 
-listTestApp: listTestApp.cpp ArrayList/ArrayList.hpp SinglyLinkedList/SinglyLinkedList.hpp
+# header files
+HEADER = ArrayList/ArrayList.hpp SinglyLinkedList/SinglyLinkedList.hpp
+
+listTestApp: listTestApp.cpp $(HEADER)
 	g++ -o listTestApp listTestApp.cpp
+
+listADT: listADT.cpp $(HEADER)
+	g++ -o listADT listADT.cpp
