후위 표기법으로 작성된 수식을 계산하는 PostfixCalculator 작성

--- a/03_Stack/ExpressionConverter/makefile
+++ b/03_Stack/ExpressionConverter/makefile
@@ -1,6 +1,6 @@
 all: infixToPostfixTest
 
-HEADER = ../ListBaseStack/ListBaseStack.hpp
+HEADER = ../ListBaseStack/ListBaseStack.hpp ExpressionConverter.hpp postfixCalculator.hpp
 
-infixToPostfixTest: infixToPostfixTest.cpp ExpressionConverter.hpp $(HEADER)
+infixToPostfixTest: infixToPostfixTest.cpp $(HEADER)
 	g++ -o infixToPostfixTest infixToPostfixTest.cpp
